[package]
name = "wcp"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@kunugiken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_io = "0.2.5"
indicatif = "0.13.0"
structopt = "0.3.7"

[dev-dependencies]
tempfile = "3.1.0"
